--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 #
 # This is the configuration file for your blog, please change these items after forked.
 
-title: Your title
-email: your-email@example.com
-name: Your name
+title: wqt
+email: email
+name: NAME
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here.
-keywords: [Your keywords]
-baseurl: '' # the subpath of your site, e.g. /`blog
-url: '' # the base hostname & protocol for your site, e.g. http://example.com
-domain: 'example.com' # the domain name for your site, e.g. example.com
+  Welder Qualification Test.
+keywords: []
+baseurl: '/wqt' # the subpath of your site, e.g. /`blog
+url: 'https://yakimk.github.io/wqt/' # the base hostname & protocol for your site, e.g. http://example.com
+domain: 'yakimk.github.io/wqt/' # the domain name for your site, e.g. example.com
 language: en
 # Supported languages list:
 # en: English
@@ -41,12 +41,13 @@ sass:
   style: expanded # compressed, compact, expanded or compressed
 
 # Build settings
-markdown: kramdown
+# markdown: kramdown
 plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-katex
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -58,3 +59,12 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+defaults:
+  - scope:
+      path: "courses"
+      type: "pages"
+    values:
+      permalink: /:path/:basename
+
+theme : minima
