--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # This is the configuration file for your blog, please change these items after forked.
 
 title: wqt
-email: email
-name: NAME
+email: 
+name: 
 description: >- # this means to ignore newlines until "baseurl:"
   Welder Qualification Test.
 keywords: []
@@ -41,7 +41,10 @@ sass:
   style: expanded # compressed, compact, expanded or compressed
 
 # Build settings
-# markdown: kramdown
+markdown: kramdown
+kramdown:
+    auto_ids: true
+
 plugins:
   - jekyll-feed
   - jekyll-paginate
