--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:    # Allow manual runs
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
