--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,8 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
   - jekyll-katex
+  - jekyll-toc
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
@@ -69,3 +71,9 @@ defaults:
       type: "pages"
     values:
       permalink: /:path/:basename
+
+toc:
+  enabled: true
+  min_heading_level: 2    # Minimum heading level to include in the TOC (default is h2)
+  max_heading_level: 3    # Maximum heading level (default is h3)
+  ordered: true
